GF-37969: Fix issue where scroller bounds didn't properly take into account scrollbar width (due to use of display:none instead of visibility).  Reverted back to using visibility, and instead update spotlight value of paging buttons to ensure they are not focusable when not visible. DCO-1.1-Signed-Off-By: Kevin Schaaf (kevin.schaaf@lge.com)

--- a/css/moonstone-dark.css
+++ b/css/moonstone-dark.css
@@ -3650,7 +3650,7 @@
 .moon-scroller-v-column,
 .moon-scroller-h-column {
   position: absolute;
-  display: none;
+  visibility: hidden;
   opacity: 0;
   transition: opacity 0.1s linear;
   -moz-transition: opacity 0.1s linear;
@@ -3669,7 +3669,7 @@
 /* Toggle opacity when enabled */
 .moon-scroller-v-column.v-scroll-enabled,
 .moon-scroller-h-column.h-scroll-enabled {
-  display: block;
+  visibility: visible;
 }
 /* Default position for vertical scrollbar */
 .moon-scroller-v-column {
